fix: set text overflow to auto in datepicker-input

--- a/src/app/datepicker-input/datepicker-input.component.scss
+++ b/src/app/datepicker-input/datepicker-input.component.scss
@@ -2,6 +2,10 @@
   margin-bottom: 1rem;
 }
 
+div.form-control {
+  overflow-x: auto;
+}
+
 .title {
   text-align: center;
 }
